Update To website

--- a/Weather _app/WeatherApp/src/app/app.component.html
+++ b/Weather _app/WeatherApp/src/app/app.component.html
@@ -9,7 +9,52 @@
         </div>
     </div>
     <div class = "lower-data">
-
+        <div class="More-info-label" >
+            More Information
+        </div>
+        <div class="more-info-container">
+            <div class="info-block">
+                <!-- -->
+                <div class="info-block-label">
+                   <!-- These are for each of the smaller blocks below the temp--> 
+                   <img src="Images/min.jpg">
+                    <span>Min</span>
+                </div>
+                <div class="info-block-value"><!-- Contain info block for tempreture-->
+                10°C      
+                </div>
+            </div>
+            <div class="info-block"><!-- -->
+                <div class="info-block-label">
+                   <!-- These are for each of the smaller blocks below the temp--> 
+                   <img src="Images/min.jpg">
+                    <span>Max</span>
+                </div>
+                <div class="info-block-value"><!-- Contain info block for tempreture-->
+                   20°C      
+                </div>
+            </div>
+            <div class="info-block"><!-- Can be copied later-->
+                <div class="info-block-label">
+                   <!-- These are for each of the smaller blocks below the temp--> 
+                   <img src="Images/Humidity.jpg">
+                    <span> Humidity</span>
+                </div>
+                <div class="info-block-value"><!-- Contain info block for tempreture-->
+                   77%      
+                </div>
+            </div>
+            <div class="info-block"><!-- Can be copied later-->
+                <div class="info-block-label">
+                   <!-- These are for each of the smaller blocks below the temp--> 
+                   <img src="Images/wind.png" >
+                    <span> Wind </span>
+                </div>
+                <div class="info-block-value"><!-- Contain info block for tempreture-->
+                   <span>11 km/h</span>      
+                </div>
+            </div>
+        </div>
     </div> 
 </div>
 <router-outlet />
