--- a/Weather _app/WeatherApp/src/app/app.component.html
+++ b/Weather _app/WeatherApp/src/app/app.component.html
@@ -1,60 +1,51 @@
 <div class="container">
     <div class="upper-data">
-        <img src="Images/Sun.jpg" ><!--  *ngIf ="14 > 15" -->
-
+        <img src="Images/Sun.jpg">
 
         <div class="weather-data">
             <div class="location">Basil</div>
-            <div class="tempreture">{{ 14.4|number:'1.0-0' }}</div> 
+            <div class="tempreture">{{ 14.4 | number:'1.0-0' }}°C</div>
         </div>
     </div>
-    <div class = "lower-data">
-        <div class="More-info-label" >
-            More Information
+
+    <div class="lower-data">
+        <div class="More-info-label" *ngIf="rainfall !== undefined">
+            <!-- Additional information could be displayed here -->
         </div>
         <div class="more-info-container">
             <div class="info-block">
-                <!-- -->
                 <div class="info-block-label">
-                   <!-- These are for each of the smaller blocks below the temp--> 
-                   <img src="Images/min.jpg">
+                    <img src="Images/min.jpg">
                     <span>Min</span>
                 </div>
-                <div class="info-block-value"><!-- Contain info block for tempreture-->
-                10°C      
-                </div>
+                <div class="info-block-value">10°C</div>
             </div>
-            <div class="info-block"><!-- -->
+            <div class="info-block">
                 <div class="info-block-label">
-                   <!-- These are for each of the smaller blocks below the temp--> 
-                   <img src="Images/min.jpg">
+                    <img src="Images/max.jpg">
                     <span>Max</span>
                 </div>
-                <div class="info-block-value"><!-- Contain info block for tempreture-->
-                   20°C      
-                </div>
+                <div class="info-block-value">20°C</div>
             </div>
-            <div class="info-block"><!-- Can be copied later-->
+            <div class="info-block">
                 <div class="info-block-label">
-                   <!-- These are for each of the smaller blocks below the temp--> 
-                   <img src="Images/Humidity.jpg">
-                    <span> Humidity</span>
+                    <img src="Images/Humidity.jpg">
+                    <span>Humidity</span>
                 </div>
-                <div class="info-block-value"><!-- Contain info block for tempreture-->
-                   77%      
-                </div>
+                <div class="info-block-value">77%</div>
             </div>
-            <div class="info-block"><!-- Can be copied later-->
+            <div class="info-block">
                 <div class="info-block-label">
-                   <!-- These are for each of the smaller blocks below the temp--> 
-                   <img src="Images/wind.png" >
-                    <span> Wind </span>
+                    <img src="Images/wind.png">
+                    <span>Wind</span>
                 </div>
-                <div class="info-block-value"><!-- Contain info block for tempreture-->
-                   <span>11 km/h</span>      
-                </div>
+                <div class="info-block-value"><span>11 km/h</span></div>
             </div>
         </div>
     </div> 
-</div>
+    <h1>Weather </h1>
+<app-rainfall-graph [predictedRainfall]="predictedRainfall ">
+</app-rainfall-graph>
+
+
 <router-outlet />
